--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ background-color: black;
 }
 </style>
 
-<video autoplay id="myVideo">
+<video autoplay loop id="myVideo">
   <source src="1.mp4" type="video/mp4">
 </video>
 </body>
